# managarm

drivers/clocktracker/src/: main.cpp
drivers/gfx/bochs/src/: main.cpp
drivers/gfx/plainfb/src/: main.cpp
drivers/gfx/virtio/src/: main.cpp
drivers/gfx/vmware/src/: main.cpp
drivers/kbd/src/: main.cpp
drivers/kernletcc/src/: main.cpp
drivers/libblockfs/src/: libblockfs.cpp
drivers/uart/src/: main.cpp
drivers/usb/devices/hid/src/: main.cpp
drivers/usb/devices/serial/src/: main.cpp
drivers/usb/hcds/ehci/src/: ehci.hpp  main.cpp
drivers/usb/hcds/uhci/src/: main.cpp  schedule.hpp
drivers/usb/hcds/xhci/src/: main.cpp  ring.cpp  trb.hpp  xhci.hpp
hel/include/: hel-syscalls.h  hel.h
kernel/eir/arch/arm/: meson.build
kernel/eir/arch/arm/exynos7870/: exynos7870.S  exynos7870.cpp  meson.build
kernel/thor/arch/arm/: cpu.cpp  gic.cpp  ints.cpp  paging.cpp  timer.cpp
kernel/thor/arch/arm/thor-internal/arch/: cpu.hpp  gic.hpp  paging.hpp
kernel/thor/arch/x86/: paging.cpp
kernel/thor/arch/x86/thor-internal/arch/: cpu.hpp  paging.hpp
kernel/thor/generic/: address-space.cpp  asid.cpp  credentials.cpp  hel.cpp  main.cpp  mbus.cpp
kernel/thor/generic/thor-internal/: credentials.hpp  mbus.hpp
kernel/thor/generic/thor-internal/arch-generic/: asid.hpp  cpu.hpp  cursor.hpp
kernel/thor/system/pci/: pci_discover.cpp  pcie_brcmstb.cpp
mbus/src/: main.cpp
protocols/mbus/: mbus.bragi
protocols/mbus/include/protocols/mbus/: client.hpp
protocols/mbus/src/: client_ng.cpp
protocols/usb/src/: hub.cpp
servers/netserver/src/: main.cpp
(+1 files in other folders)
